# Momentum-Firmware

./: .drone.yml  .gitignore  .gitmodules  .worktreeinclude  .yamllint  AGENTS.md  AMAZONQ.md  CHANGELOG.md  CLAUDE.md  CODING_STYLE.md  CONTRIBUTING.md  ClaudeSlack.md  ESP_FLASHER_GUIDE.md  FLIPPER_AUTO_ETHERNET.md  GEMINI.md  Momentum-Firmware.code-workspace  PLAN.md  QUICK_START_AUTOMATION.md  ReadMe.md  SConstruct  SECURITY.md  SECURITY_ANALYSIS_ALERT_14.md  STRAWBERRY_MCP.md  TEST_RESULTS_E2E.md  WARP.md  alerts.json  cleanup_redundant.py  code_scanning.json  debug_storage.py  deepseek  ethernet.md  fbt  fbt_options.py  firebase.json  firmware.scons  fz_functions_enumeration.md  grep_results.txt  issues_all.txt  merge_all_complete.sh  merge_all_robust.sh  (+12 more)
.ai/: README.md  SKILL.md  comparison_analysis.md  orchestrator.py  orchestrator_updated.py  requirements.txt  task_router.py
.ci_files/: devbuild_msg_discord.txt  devbuild_msg_telegram.txt  release_msg_discord.txt  release_msg_telegram.txt
.claude/: settings.json
.codex/: config.toml  setup.sh
.gemini/: POLICY_ENGINE.md  mcp-unified.json  settings.json  system.md  telemetry-gcp.json  telemetry.jsonl
.github/: CODEOWNERS  copilot-instructions.md  setup-go-tools.sh  setup-tools.sh  (+1 more)
furi/: flipper.h  (+3 more)
realtek/drivers/rtl8814au-driver/driver/: CMakeLists.txt
realtek/drivers/rtl8814au-driver/driver/Sources/: Driver.cpp  Driver.hpp  USBDevice.cpp  USBDevice.hpp
realtek/drivers/rtl8814au-driver/shim/: CMakeLists.txt
realtek/drivers/rtl8814au-driver/shim/src/: main.cpp  rtl8814au_shim.cpp  rtl8814au_shim.hpp
(+2776 files in other folders)
